spoiler-content: Fix alignment of copy button.
The copy icon was misaligned inside the code block
so, to fix it I changed the right property in the css,
and this aligned the icon properly inside the block.

Fixes: #20712.

--- a/static/styles/rendered_markdown.css
+++ b/static/styles/rendered_markdown.css
@@ -238,6 +238,11 @@
                 padding: 5px;
                 height: auto;
             }
+
+            /* Style copy-to-clipboard button inside spoiler tag codeblocks */
+            .copy_codeblock {
+                right: 16px;
+            }
         }
 
         .spoiler-button {
